--- a/app/views/clientes.html
+++ b/app/views/clientes.html
@@ -40,8 +40,7 @@
 
 			</div>
 
-			<!-- <div ng-show="client.lastname" class="col s12 formu-show-hide"> -->
-			<div>
+			<div ng-show="client.lastname" class="col s12 formu-show-hide">
 				<div class="col s12">
 					<div class="section center-align">
 					    <h5>Paso 2</h5>
