--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -555,7 +555,7 @@ a[href^="https://maps.google.com/maps"] {
 }
 .formu-show-hide {
   padding: 10px;
-  height: 280px;
+  min-height: 280px;
 }
 .formu-show-hide {
   -webkit-transition: all linear 0.5s;
