--- a/app/styles/ap-privado.styl
+++ b/app/styles/ap-privado.styl
@@ -202,3 +202,25 @@
 	background-color red
 	width 100%
 	height 1px
+	
+.cambioMensaje
+	color red
+	font-size 16px
+	text-align center
+	margin-bottom 15px
+	border solid red
+	border-width 0 0 1px 0
+	padding 10px
+	
+.cambioMensajeExitoso
+	color green
+	font-size 16px
+	text-align center
+	margin-bottom 15px
+	border solid green
+	border-width 0 0 1px 0
+	padding 10px
+	
+.cambioBtn
+	width 100%
+	margin-bottom 20px
