--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -764,6 +764,28 @@ a[href^="https://maps.google.com/maps"] {
   width: 100%;
   height: 1px;
 }
+.cambioMensaje {
+  color: #f00;
+  font-size: 16px;
+  text-align: center;
+  margin-bottom: 15px;
+  border: solid #f00;
+  border-width: 0 0 1px 0;
+  padding: 10px;
+}
+.cambioMensajeExitoso {
+  color: #008000;
+  font-size: 16px;
+  text-align: center;
+  margin-bottom: 15px;
+  border: solid #008000;
+  border-width: 0 0 1px 0;
+  padding: 10px;
+}
+.cambioBtn {
+  width: 100%;
+  margin-bottom: 20px;
+}
 @media screen and (max-width: 800px) {
   .textoIntrusivo {
     width: 80%;
